--- a/index.html
+++ b/index.html
@@ -1,45 +1,54 @@
+<!DOCTYPE html>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
+</head>
+
 <body>
-  
+
  <div class="calculator">
    <div><h2>Calculator</h2></div>
-   
-   <div class="screen shadow" id="screen"></div> 
-   
+
+   <div class="screen shadow" id="screen"></div>
+
    <div class="row" style="padding-top: 14px">
      <button class="btn key ac">AC</button>
      <button class="btn key ce">CE</button>
      <button class="btn key" value="%">%</button>
      <button class="btn key" value="/">/</button>
    </div>
-   
+
    <div class="row">
      <button class="btn key" value="7">7</button>
      <button class="btn key" value="8">8</button>
      <button class="btn key" value="9">9</button>
      <button class="btn key" value="*">*</button>
    </div>
-   
+
    <div class="row">
      <button class="btn key" value="4">4</button>
      <button class="btn key" value="5">5</button>
      <button class="btn key" value="6">6</button>
      <button class="btn key" value="-">-</button>
    </div>
-   
+
    <div class="row">
      <button class="btn" value="1">1</button>
      <button class="btn" value="2">2</button>
      <button class="btn" value="3">3</button>
      <button class="btn" value="+">+</button>
    </div>
-   
+
    <div class="row">
      <button class="btn" value=".">.</button>
      <button class="btn" value="0">0</button>
      <button class="btn equals">=</button>
-     <a href="http://bit.ly/24okcwB" target="_blank"><button class="btn" value="+">&#9889</button></a>
+     <a href="https://github.com/collinferry/calculator" target="_blank"><button class="btn" value="+">&#9889</button></a>
    </div>
-   
+
   </div>
-  
+
 </body>
